fix _navigation changed visibility of links

--- a/css/style.css
+++ b/css/style.css
@@ -559,6 +559,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  visibility: hidden;
   width: 0;
   opacity: 0;
   transition: all 0.8s cubic-bezier(0.68, -0.55, 0.256, 1.55); }
@@ -599,6 +600,7 @@ body {
   transform: scale(80); }
 
 .navigation__checkbox:checked ~ .navigation__nav {
+  visibility: visible;
   opacity: 1;
   width: 100%; }
 
